# simd-minimizers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  readme.org
.github/workflows/: rust.yml
bench/: Cargo.toml  english.200MB  justfile  results-neon.json  results-plot.json  results.json
bench/benches/: bench.rs
bench/src/: counting.rs  fxhash.rs  hash.rs  lib.rs  naive.rs  nthash.rs  rescan.rs  ringbuf.rs  split.rs
benches/: bench.rs
examples/: bench.rs  variance.rs
simd-minimizers/: Cargo.toml  README.md  readme.md
simd-minimizers-bench/: Cargo.toml  eval.py  justfile  results-neon.json  results-plot-neon.json  results-plot.json  results.json  sources.200MB
simd-minimizers-bench/benches/: bench.rs
simd-minimizers-bench/src/: fxhash.rs  lib.rs  minimizer.rs  nthash.rs  rescan_daniel.rs  split.rs
simd-minimizers/src/: alex.rs  anti_lex.rs  canonical.rs  collect.rs  dedup.rs  lib.rs  linearize.rs  minimizer.rs  minimizers.rs  nthash.rs  sliding_min.rs  test.rs  transpose.rs
simd-minimizers/src/dedup/: dedup_avx.rs  dedup_fallback.rs  dedup_neon.rs  mod.rs
simd-minimizers/src/intrinsics/: dedup.rs  mod.rs  table_lookup.rs
src/: anti_lex.rs  canonical.rs  collect.rs  lib.rs  minimizers.rs  modmini.rs  sliding_min.rs  syncmers.rs  test.rs
src/intrinsics/: dedup.rs  mod.rs  table_lookup.rs
