[workspace]
members = ["bench"]

[profile.release]
lto = "thin"
incremental = true
debug = true

[workspace.dependencies]
seq-hash = "0.2.0"

[package]
name = "simd-minimizers"
version = "3.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-seq/simd-minimizers"
keywords = ["minimizers", "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "A SIMD-accelerated library to compute random minimizers"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
itertools = "0.15"
seq-hash.workspace = true

[dev-dependencies]
rand = "0.10"

[features]
scalar = ["seq-hash/scalar"]
