[package]
name = "simd-minimizers-bench"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.6.0"
fxhash = "0.2"
itertools = "0.14"
minimizer-iter = "1.2.1"
needletail = "0.6.1"
nthash = "0.5.1"
rand = "0.9"
wyhash = "0.6"

simd-minimizers = { path = ".." }
packed-seq.workspace = true
seq-hash.workspace = true
wide = "0.7.32"
serde = "1.0.217"
serde_json = "1.0.135"
rayon = "1.10.0"

[[bench]]
name = "bench"
harness = false
