[package]
name = "simd-minimizers-bench"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
fxhash = "0.2"
itertools = "0.12"
minimizer-iter = "1.2.1"
needletail = "0.5.1"
nthash = "0.5.1"
rand = "0.8"
wyhash = "0.5"

simd-minimizers = { path = "../simd-minimizers" }
packed-seq.workspace = true
wide = "0.7.32"
serde = "1.0.217"
serde_json = "1.0.135"
# packed-seq = { version = "0.1.0", path = "../packed-seq" }

[[bench]]
name = "bench"
harness = false
