[package]
name = "simd-minimizers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
itertools = "0.12"
packed-seq = { version = "0.1.0", git = "https://github.com/rust-seq/packed-seq" }
# packed-seq = { version = "0.1.0", path = "../packed-seq" }
wide = "0.7.30"

[dev-dependencies]
rand = "0.8"

[features]
# Hides the `simd` warnings when neither AVX nor NEON is detected.
hide-simd-warning = []
