[package]
name = "simd-minimizers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
itertools = "0.12"
packed-seq.workspace = true
wide = "0.7.30"

[dev-dependencies]
rand = "0.8"

[features]
# Hides the `simd` warnings when neither AVX2 nor NEON is detected.
hide-simd-warning = []
