[package]
name = "simd-minimizers"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rust-seq/simd-minimizers"
keywords = ["minimizers", "simd", "dna", "bioinformatics"]
categories = ["compression", "data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "A SIMD-accelerated library to compute random minimizers"

[dependencies]
itertools = "0.14"
packed-seq.workspace = true
wide = "0.7"

[dev-dependencies]
rand = "0.9"

[features]
# Hides the `simd` warnings when neither AVX2 nor NEON is detected.
hide-simd-warning = []
